[gd_scene load_steps=4 format=3 uid="uid://b8c58o3c6qqmp"]

[ext_resource type="Script" path="res://scripts/mercenary.gd" id="1_ud8up"]
[ext_resource type="Texture2D" uid="uid://b1g1uehikwff8" path="res://assets/Tiles/tile_0103.png" id="2_lrnni"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18eff"]
size = Vector2(16, 16)

[node name="Mercenary" type="CharacterBody2D"]
script = ExtResource("1_ud8up")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_18eff")

[node name="Left" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(3.49691e-07, 8)

[node name="Right" type="RayCast2D" parent="."]
rotation = -1.5708
target_position = Vector2(-3.49691e-07, 8)

[node name="Up" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(-6.99382e-07, 8)

[node name="Down" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)

[node name="Tile0103" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -16)
rotation = 3.14159
texture = ExtResource("2_lrnni")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="started_moving" from="." to="." method="_on_started_moving"]
